Updated example hiera configs

--- a/docs/hiera/env.yaml
+++ b/docs/hiera/env.yaml
@@ -6,13 +6,14 @@ lightblue::yumrepo::jbeaptools::baseurl: <baseurl for JBEAP-TOOLS>
 lightblue::yumrepo::lightblue::baseurl: <baseurl for lightblue>
 
 # MongoDB configuration of username, password, and auth source. 
-lightblue::eap::module::datastore::mongo::noCertValidation: true
-lightblue::eap::module::datastore::mongo::auth::mechanism: MONGODB_CR_MECHANISM
-lightblue::eap::module::datastore::mongo::auth::username: <mongo username>
-lightblue::eap::module::datastore::mongo::auth::password: <mongo password>
-lightblue::eap::module::datastore::mongo::auth::source: <mongo auth-source>
+lightblue::eap::module::mongo_noCertValidation: false
+lightblue::eap::module::mongo_ssl: true
+lightblue::eap::module::mongo_auth_mechanism: MONGODB_CR_MECHANISM
+lightblue::eap::module::mongo_auth_username: <mongo username>
+lightblue::eap::module::mongo_auth_password: <mongo password>
+lightblue::eap::module::mongo_auth_source: <mongo auth-source>
 
 # MongoDB server list (can be a single host needed).
-lightblue::eap::module::datastore::mongo::servers:
+lightblue::eap::module::mongo_servers_cfg:
     - host: <mongo server fqdn or ip address>
       port: 27017
