--- a/.travis.yml
+++ b/.travis.yml
@@ -8,9 +8,9 @@ rvm:
 - 2.1.0
 script: bundle exec rake spec
 env:
-- PUPPET_VERSION="~> 2.7.0"
-- PUPPET_VERSION="~> 3.2.0"
-- PUPPET_VERSION="~> 3.3.0"
+#- PUPPET_VERSION="~> 2.7.0"
+#- PUPPET_VERSION="~> 3.2.0"
+#- PUPPET_VERSION="~> 3.3.0"
 - PUPPET_VERSION="~> 3.4.0"
 - PUPPET_VERSION="~> 3.5.0"
 - PUPPET_VERSION="~> 3.6.0"
