--- a/.travis.yml
+++ b/.travis.yml
@@ -1,23 +1,24 @@
 ---
 language: ruby
-before_install: rm Gemfile.lock || true
+before_install: 
+    - rm Gemfile.lock || true
+    - git submodule update --init --recursive
+    - git submodule foreach git pull origin master
 rvm:
-- 1.8.7
-- 1.9.3
-- 2.0.0
-- 2.1.0
-script: bundle exec rake spec
+    - 1.8.7
+    - 1.9.3
+    - 2.0.0
+    - 2.1.0
+script: 
+    - bundle exec rake spec
 env:
-#- PUPPET_VERSION="~> 2.7.0"
-#- PUPPET_VERSION="~> 3.2.0"
-#- PUPPET_VERSION="~> 3.3.0"
-- PUPPET_VERSION="~> 3.4.0"
-- PUPPET_VERSION="~> 3.5.0"
-- PUPPET_VERSION="~> 3.6.0"
-- PUPPET_VERSION="~> 3.7.0"
+    - PUPPET_VERSION="~> 3.4.0"
+    - PUPPET_VERSION="~> 3.5.0"
+    - PUPPET_VERSION="~> 3.6.0"
+    - PUPPET_VERSION="~> 3.7.0"
 notifications:
   email: false
   irc:
     channels:
-    - chat.freenode.net#lightblue
+        - chat.freenode.net#lightblue
     on_success: always
