--- a/.travis.yml
+++ b/.travis.yml
@@ -1,12 +1,15 @@
 ---
 language: ruby
-before_install: 
-    - rm Gemfile.lock || true
 rvm:
     - 1.8.7
     - 1.9.3
     - 2.0.0
     - 2.1.0
+
+before_script:
+   - bundle exec rake syntax
+   - bundle exec rake lint
+
 script: 
     - bundle exec rake spec
 env:
