Hopefully setup ssl test to not fail now

--- a/spec/fixtures/hiera/repo.yaml
+++ b/spec/fixtures/hiera/repo.yaml
@@ -26,6 +26,11 @@ lightblue::authentication::saml::signing_key_pass: my_signing_key_pass
 lightblue::authentication::saml::signing_key_alias: my_signing_key_alias
 lightblue::authentication::saml::validating_key_alias: saml.mycompany.com
 lightblue::authentication::saml::validating_alias_value: MyCompanyIdp
+lightblue::eap::truststore::keystore_alias: keystore
+lightblue::eap::truststore::keystore_location: /keystore
+lightblue::eap::truststore::keystore_password: password
+lightblue::eap::truststore::identity_certificate_source: /tmp/idsource
+lightblue::eap::truststore::identity_certificate_file: /idcertfile
 
 lightblue::eap::module::data_cors_config:
   url_patterns:
