Add support for adding multiple certificates to keystores and truststores.  Fixes #188

--- a/spec/fixtures/hiera/repo.yaml
+++ b/spec/fixtures/hiera/repo.yaml
@@ -26,13 +26,17 @@ lightblue::authentication::saml::signing_key_pass: my_signing_key_pass
 lightblue::authentication::saml::signing_key_alias: my_signing_key_alias
 lightblue::authentication::saml::validating_key_alias: saml.mycompany.com
 lightblue::authentication::saml::validating_alias_value: MyCompanyIdp
-lightblue::eap::ssl::server_certificate_source: ///server_certificate_source/
-lightblue::eap::ssl::server_certificate_file: ///server_certificate_file/
+lightblue::eap::ssl::certificates:
+  'lightblue.io':
+     source: "puppet:///modules/certificates/lightblue.io"
+     file: "/lightblue.io"
 lightblue::eap::truststore::keystore_alias: keystore
 lightblue::eap::truststore::keystore_location: /keystore
 lightblue::eap::truststore::keystore_password: password
-lightblue::eap::truststore::identity_certificate_source: ///identity_certificate_source/
-lightblue::eap::truststore::identity_certificate_file: ///identity_certificate_file/
+lightblue::eap::truststore::certificates:
+  'cacert':
+     source: "puppet:///modules/certificates/cacert"
+     file: "/cacert"
 
 lightblue::eap::module::data_cors_config:
   url_patterns:
